# sitreps-client

./: .coveragerc  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
sitreps_client/: cloc.py  code_coverage.py  exceptions.py  project.py  unit_tests.py
sitreps_client/utils/: ci_downloader.py  helpers.py  repository.py
tests/: log  test_cloc.py  test_code_coverage.py  test_unittests.py  test_utils_repository.py
